Infra/AWS/Network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates the networking stack required for Roboshop
Mappings:
  Subnets:
    SubnetTypes:
      BastionSubnet: 10.0.0.0/21
      PublicSubnet: 10.0.32.0/21
  Routeables:
    RTBTypes:
      PublicRTB: BastionSubnet
      PrivateRTB: PublicSubnet
Transform: AWS::LanguageExtensions
Resources: 
  RoboshopVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: 
        - Key: Project
          Value: Roboshop

  RoboshopIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags: 
        - Key: Project
          Value: Roboshop 

  IGWVPCAtt:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref RoboshopIGW
      VpcId: !Ref RoboshopVPC
 
  
  'Fn::ForEach::Subnets':
    - Subnettype
    - [BastionSubnet, PublicSubnet]
    - '${Subnettype}':
        Type: AWS::EC2::Subnet
        Properties:
          CidrBlock: !FindInMap [Subnets, SubnetTypes, !Ref 'Subnettype']
          Tags: 
            - Key: Project
              Value: Roboshop
            - Key: Component
              Value: !Ref Subnettype
          VpcId: !Ref RoboshopVPC


  'Fn::ForEach::Routetables':
    - Routetable 
    - [PrivateRTB, PublicRTB]
    - '${Routetable}':
        Type: AWS::EC2::RouteTable
        Properties:
          Tags: 
            - Key: Project
              Value: Roboshop 
            - Key: Component
              Value: !Ref Routetable
          VpcId: !Ref RoboshopVPC
      '${Routetable}Att':
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !GetAtt [ !Ref 'Routetable', RouteTableId]  
          SubnetId: !GetAtt [ !FindInMap [Routeables, RTBTypes, !Ref 'Routetable'], SubnetId] 
           
        
  IGWroute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref RoboshopIGW
      RouteTableId: !GetAtt [PublicRTB , RouteTableId] 

  NATroute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref RoboNAT
      RouteTableId: !GetAtt [PrivateRTB , RouteTableId] 


  RoboNAT:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt [RoboEIP, AllocationId]
      SubnetId: !GetAtt [BastionSubnet, SubnetId]
  

  RoboEIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags: 
        - Key: name
          Value: RoboEIP
